[metadata]
name = TransitFit
version = 2.2.5
author = Joshua Hayes and collaborators
author_email = joshjchayes@gmail.com
description = Package for fitting of transit light curves with host-characteristic-informed limb darkening
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshjchayes/TransitFit
project_urls =
    Documentation = https://transitfit.readthedocs.io/en/latest/index.html
keywords = exoplanets, transits, fitting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = find:
python_requires = >=3.6
